# renovate-demo

./: pyproject.toml  renovate.json5
.github/workflows/: main .yml
docker/: .dev_env  .env  Dockerfile  dependencies.txt  docker-compose.yaml  justfile
